feat: Add a gap for multiple scroll animations so that they are not triggered twice at the same moment.

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -17,6 +17,7 @@
       [easing]="example.easing ? example.easing[i] : 'ease'"
       [disabled]="example.disabled"
       [once]="example.once ?? true"
+      [undoGap]="example.undoGap"
       src="https://picsum.photos/id/{{
         150 + (i + 1) * (exampleIndex + 1)
       }}/300"
