feat(standalone): convert to a complete standalone solution for better support with Angular 18
- Converted to a complete standalone solution for better Angular 18 support
- Added ability to set global configs

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -11,7 +11,7 @@
       [speed]="
         example.differentSpeed ? example.speed! * (i + 1) : example.speed
       "
-      [delay]="example.delay ?? 0"
+      [delay]="example.delay ?? ''"
       [aos]="example.threshold"
       [thresholdMode]="example.thresholdMode"
       [easing]="example.easing ? example.easing[i] : 'ease'"
