--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -1,26 +1,36 @@
 $min-size: 250px;
 
 h1 {
-    font-size: 1.4rem;
-    font-weight: 600;
-    margin: 0;
-    padding: 0px;
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin: 0;
+  padding: 0px;
 }
 
 .grid {
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(auto-fill, minmax($min-size, 1fr));
-    gap: 10px;
-    margin-bottom: 80px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, minmax($min-size, 1fr));
+  gap: 10px;
+  margin-bottom: 80px;
 }
 
 img {
-    width: 100%;
+  width: 100%;
+  min-height: $min-size;
+  background-color: aqua;
+  height: auto;
+  box-sizing: border-box;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+@media screen and (max-width: 1200px) {
+  $min-size: 150px;
+  img {
     min-height: $min-size;
-    background-color: aqua;
-    height: auto;
-    box-sizing: border-box;
-    object-fit: cover;
-    border-radius: 4px;
+  }
+  .grid {
+    grid-template-columns: repeat(auto-fill, minmax($min-size, 1fr));
+  }
 }
